unpackaged/main/default/objects/d_wh__Sequence_Log_Item__c/d_wh__Sequence_Log_Item__c.object-meta.xml
<CustomObject>
    <label>Sequence Log Item</label>
    <nameField>
        <displayFormat>LI-{00000000}</displayFormat>
        <label>Log Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sequence Log Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>