unpackaged/main/default/objects/d_wh__Sequence_Log_Item__c/fields/d_wh__Callout__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callout__c</fullName>
    <label>Callout #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>