unpackaged/main/default/objects/d_wh__Sequence_Log_Item__c/fields/d_wh__Callout_Sequence_Item__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callout_Sequence_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Callout Sequence Item</label>
    <referenceTo>d_wh__Callout_Sequence_Item__c</referenceTo>
    <relationshipLabel>Sequence Log Items</relationshipLabel>
    <relationshipName>Sequence_Log_Items</relationshipName>
    <type>Lookup</type>
</CustomField>