unpackaged/main/default/objects/d_wh__Sequence_Log_Item__c/fields/d_wh__Details__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>