unpackaged/main/default/objects/d_wh__Sequence_Log_Item__c/fields/d_wh__Sequence_Log__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Sequence_Log__c</fullName>
    <label>Sequence Log</label>
    <referenceTo>d_wh__Sequence_Log__c</referenceTo>
    <relationshipLabel>Sequence Log Items</relationshipLabel>
    <relationshipName>Sequence_Log_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>